--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
   <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp" />
   <meta name="twitter:image:alt" content="aitrends.now logo" />
 
-
-
+  <link rel="preload" href="/assets/fonts/GoogleSans-Regular.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous" />
+  <link rel="preload" href="/dist/index.css" as="style">
 
 
 
