--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
   <style>
     .profile-description {
       font-family: "Google Sans", Arial, sans-serif;
-      font-size: 16px;
+      font-size: 18px;
+      font-weight: 400;
+      letter-spacing: -.24px;
+      line-height: 100%;
       line-height: 1.5;
       color: var(--text-color);
       visibility: visible;
