--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <link rel="preload" href="/assets/fonts/GoogleSans-Regular.woff2" as="font" type="font/woff2"
     crossorigin="anonymous" />
-
+  <link rel="preload" href="/dist/assets/css/index-BnIiAYQf.css" as="style">
 
 
 
