--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <style>
     .profile-description {
-      font-family: "Google Sans", Arial, sans-serif;
+      font-family: Google Sans, Arial, sans-serif;
       font-size: 18px;
       font-weight: 400;
       letter-spacing: -.24px;
@@ -51,9 +51,9 @@
       color: var(--text-color);
       visibility: visible;
       opacity: 1;
-      transition: opacity 0.2s ease-in-out;
+      transition: opacity .2s ease-in-out;
       content-visibility: auto;
-      contain-intrinsic-size: auto 20px;
+      contain-intrinsic-size: auto 20px
     }
   </style>
 </head>
