--- a/index.html
+++ b/index.html
@@ -38,22 +38,21 @@
     importance="high">
 
 
-  <link rel="preload" href="/dist/assets/css/index-BnIiAYQf.css" as="style">
+  <link rel="preload" href="/dist/assets/css/index-Cg_Mjs-U.css" as="style">
 
   <style>
     .profile-description {
-      font-family: Google Sans, Arial, sans-serif;
+      font-family: "Google Sans", Arial, sans-serif;
       font-size: 18px;
       font-weight: 400;
-      letter-spacing: -.24px;
-      line-height: 100%;
+      letter-spacing: -0.24px;
       line-height: 1.5;
       color: var(--text-color);
-      visibility: visible;
-      opacity: 1;
-      transition: opacity .2s ease-in-out;
-      content-visibility: auto;
-      contain-intrinsic-size: auto 20px
+      visibility: visible !important;
+      opacity: 1 !important;
+      transition: none !important;
+      content-visibility: visible !important;
+      contain-intrinsic-size: auto 20px;
     }
   </style>
 </head>
