--- a/index.html
+++ b/index.html
@@ -43,8 +43,15 @@
     @font-face {
       font-family: "Google Sans";
       src: url("/src/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+      font-display: swap;
       font-weight: 400;
       font-style: normal;
+    }
+
+    .profile-username {
+      font-size: 50px;
+      font-weight: 800;
+      letter-spacing: -1.44px;
     }
 
     .profile-description {
