--- a/index.html
+++ b/index.html
@@ -7,38 +7,44 @@
   <title>aitrends.now - Your Smart Link Hub</title>
   <meta name="description" content="Stay updated with the latest AI trends, tech updates, and useful resources.">
 
+  <!-- Preconnect to optimize font and asset loading -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <!-- Favicons (processed by Vite) -->
   <link rel="icon" href="/src/assets/images/favicon.png" sizes="any" type="image/png">
   <link rel="icon" href="/src/assets/images/favicon-16x16.png" sizes="16x16" type="image/png">
   <link rel="icon" href="/src/assets/images/favicon-32x32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="/src/assets/images/favicon-48x48.png" sizes="48x48" type="image/png">
-  <link rel="icon" href="/src/assets/images/favicon.ico" />
-  <link rel="apple-touch-icon" href="/src/assets/images/apple-touch-icon.png" />
-  <link rel="manifest" href="/src/assets/site.webmanifest" />
+  <link rel="icon" href="/src/assets/images/favicon.ico">
+  <link rel="apple-touch-icon" href="/src/assets/images/apple-touch-icon.png">
+  <link rel="manifest" href="/src/assets/site.webmanifest">
 
-  <!-- Open Graph and Twitter Cards -->
-  <meta property="og:title" content="aitrends.now" />
-  <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech." />
-  <meta property="og:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp" />
-  <meta property="og:image:alt" content="aitrends.now logo" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
-  <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:locale" content="en_US" />
-  <meta property="og:site_name" content="aitrends.now" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="aitrends.now" />
-  <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech." />
-  <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp" />
-  <meta name="twitter:image:alt" content="aitrends.now logo" />
+  <!-- Open Graph & Twitter Cards -->
+  <meta property="og:title" content="aitrends.now">
+  <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
+  <meta property="og:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp"
+    loading="lazy">
+  <meta property="og:image:alt" content="aitrends.now logo">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:site_name" content="aitrends.now">
 
-  <!-- Preload critical font (hashed by Vite) -->
-  <!-- Note: Exact hash will be generated post-build; adjust dynamically if needed -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="aitrends.now">
+  <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
+  <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp"
+    loading="lazy">
+  <meta name="twitter:image:alt" content="aitrends.now logo">
+
+  <!-- Preload Fonts -->
   <link rel="preload" href="/src/assets/fonts/GoogleSans-Regular.woff2" as="font" type="font/woff2"
-    crossorigin="anonymous" importance="high">
+    crossorigin="anonymous">
 
-  <!-- Inline font definition -->
+  <!-- Inline Font Definition -->
   <style>
     @font-face {
       font-family: "Google Sans";
@@ -48,6 +54,7 @@
       font-style: normal;
     }
 
+    /* Improved text rendering */
     .profile-username {
       font-size: 50px;
       font-weight: 800;
@@ -72,7 +79,8 @@
 
 <body>
   <div id="root"></div>
-  <!-- Vite injects the script here during build -->
+
+  <!-- Defer main script -->
   <script type="module" src="/src/main.tsx" defer></script>
 </body>
 
