--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
   <link rel="preload" href="/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/GoogleSans-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
+  <link rel="preload" href="/css/index-BAC5f22t.css" as="style">
+  <link rel="stylesheet" href="/css/index-BAC5f22t.css">
 
 
 
@@ -54,7 +56,7 @@
       font-family: "Google Sans";
       font-style: normal;
       font-weight: 400;
-      font-display: swap;
+      font-display: fallback;
       src: url("/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
     }
 
@@ -68,10 +70,16 @@
 
 
     .profile-username {
+      font-family: "Google Sans", Arial, sans-serif;
       font-size: 50px;
       font-weight: 800;
+      display: block;
+      text-align: center;
       letter-spacing: -1.44px;
+      margin-top: 10px;
+
     }
+
 
     .profile-description {
       font-family: "Google Sans", Arial, sans-serif;
