--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
       font-size: 50px;
       font-weight: 800;
       display: block;
+      min-height: 30px;
+      /* Adjust as needed */
       text-align: center;
       letter-spacing: -1.44px;
       margin-top: 10px;
