--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <link rel="preload" href="/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="/assets/fonts/GoogleSans-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
-  <link rel="preload" href="/css/index-CaE8d_mx.css" as="style">
-  <link rel="stylesheet" href="/css/index-CaE8d_mx.css">
+  <link rel="preload" href="/css/index-Cz6tcUQJ.css" as="style">
+  <link rel="stylesheet" href="/index-Cz6tcUQJ.css">
 
 
 
