--- a/index.html
+++ b/index.html
@@ -42,10 +42,15 @@
 
 
 
-  <link rel="preload" href="/assets/fonts/GoogleSans-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="/assets/fonts/GoogleSans-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/src/assets/fonts/GoogleSans-Regular.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="/src/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
+  <link rel="preload" href="/src/assets/fonts/GoogleSans-Medium.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
 
+  <link rel="preload" href="/dist/assets/css/index-Cz6tcUQJ.css" as="style">
+  <link rel="stylesheet" href="/dist/assets/css/index-Cz6tcUQJ.css">
 
 
 
