--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
   <link rel="preload" href="/src/assets/fonts/GoogleSans-Medium.woff2" as="font" type="font/woff2"
     crossorigin="anonymous">
 
-  <link rel="preload" href="/dist/assets/css/index-Cz6tcUQJ.css" as="style">
-  <link rel="stylesheet" href="/dist/assets/css/index-Cz6tcUQJ.css">
+  <link rel="preload" href="/assets/css/index.[hash].css" as="style">
+  <link rel="stylesheet" href="/assets/css/index.[hash].css">
+
 
 
 
