--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <link rel="preload" href="/src/assets/fonts/GoogleSans-Medium.woff2" as="font" type="font/woff2"
     crossorigin="anonymous">
 
-
-
+  <link rel="preload" href="/aitrends.now/assets/css/index-Cz6tcUQJ.css" as="style">
+  <link rel="stylesheet" href="/aitrends.now/assets/css/index-Cz6tcUQJ.css">
 
 
 
