--- a/index.html
+++ b/index.html
@@ -44,29 +44,13 @@
 
 
 
-
+  <link rel="preload" href="/aitrends.now/assets/css/index-Cz6tcUQJ.css" as="style">
+  <link rel="stylesheet" href="/aitrends.now/assets/css/index-Cz6tcUQJ.css">
 
 
 
 
   <style>
-    @font-face {
-      font-family: "Google Sans";
-      font-style: normal;
-      font-weight: 400;
-      font-display: fallback;
-      src: url("/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
-    }
-
-    @font-face {
-      font-family: "Google Sans";
-      font-style: normal;
-      font-weight: 700;
-      font-display: swap;
-      src: url("/assets/fonts/GoogleSans-Bold.woff2") format("woff2");
-    }
-
-
     .profile-username {
       font-family: "Google Sans", Arial, sans-serif;
       font-size: 50px;
