--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       font-family: "Google Sans", Arial, sans-serif;
       font-size: 18px;
       font-weight: 400;
+      min-height: 30px;
       letter-spacing: -0.24px;
       line-height: 1.5;
       color: var(--text-color);
