--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   <title>aitrends.now - Your Smart Link Hub</title>
   <meta name="description" content="Stay updated with the latest AI trends, tech updates, and useful resources.">
 
-  <!-- Preconnect to optimize font and asset loading -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 
   <!-- Favicons (processed by Vite) -->
   <link rel="icon" href="/src/assets/images/favicon.png" sizes="any" type="image/png">
@@ -36,16 +34,13 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="aitrends.now">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp"
-    loading="lazy">
+  <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
 
 
 
 
 
-  <link rel="preload" href="/aitrends.now/assets/css/index-Cz6tcUQJ.css" as="style">
-  <link rel="stylesheet" href="/aitrends.now/assets/css/index-Cz6tcUQJ.css">
 
 
 
