--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
       font-family: "Google Sans", Arial, sans-serif;
       font-size: 50px;
       font-weight: 800;
-      display: block;
-      min-height: 30px;
       text-align: center;
       letter-spacing: -1.44px;
       margin-top: 10px;
+      line-height: 1.2;
 
     }
 
