--- a/index.html
+++ b/index.html
@@ -34,16 +34,23 @@
   <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
 
-  <!-- Link to index.css -->
+  <!-- Preload Fonts -->
+  <link rel="preload" href="/src/assets/fonts/GoogleSans-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/src/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/src/assets/fonts/GoogleSans-Medium.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" as="style">
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/fonts/bootstrap-icons.woff2"
+    as="font" type="font/woff2" crossorigin>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="/src/index.css">
 </head>
 
 <body>
   <div id="root">
-    <h1 class="profile-username">aitrends.now</h1> <!-- Pre-rendered fallback -->
+    <h1 class="profile-username">aitrends.now</h1>
   </div>
-
-  <!-- Defer main script -->
   <script type="module" src="/src/main.tsx" defer></script>
 </body>
 
