--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -19,8 +19,7 @@
   <!-- Open Graph & Twitter Cards -->
   <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta property="og:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp"
-    loading="lazy">
+  <meta property="og:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp">
   <meta property="og:image:alt" content="aitrends.now logo">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -34,16 +33,12 @@
   <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
 
-
-
   <!-- CSS -->
   <link rel="stylesheet" href="/src/index.css" fetchpriority="high">
 </head>
 
 <body>
-  <div id="root">
-    <h1 class="profile-username">aitrends.now</h1>
-  </div>
+  <div id="root"></div>
   <script type="module" src="/src/main.tsx" defer></script>
 </body>
 
