--- a/index.html
+++ b/index.html
@@ -33,8 +33,54 @@
   <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
 
+  <link rel="preload" href="/aitrends.now/profile-image.webp" as="image">
+
+  <style>
+    .wrapper {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    .main-content {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
+
+    .profile-image {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+    }
+
+    .profile-username {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin: 0.5rem 0;
+    }
+
+    .profile-description {
+      margin-bottom: 1rem;
+    }
+
+    .theme-switcher-btn {
+      position: absolute;
+      top: 0;
+      right: 0;
+      margin: 1rem;
+      border: none;
+      background: none;
+      font-size: 1.25rem;
+      cursor: pointer;
+    }
+  </style>
   <!-- CSS -->
-  <link rel="stylesheet" href="/src/index.css" fetchpriority="high">
+  <link rel="stylesheet" href="/src/index.css" fetchpriority="high" media="print" onload="this.media='all'">
+
 </head>
 
 <body>
