--- a/index.html
+++ b/index.html
@@ -33,9 +33,35 @@
   <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
 
-
+  <link rel="preload" href="/assets/fonts/GoogleSans-Regular-Djvx7XI4.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="/assets/fonts/GoogleSans-Medium-krSl1Cbs.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="/assets/fonts/GoogleSans-Bold-DdUpYAm4.woff2" as="font" type="font/woff2" crossorigin />
 
   <style>
+    @font-face {
+      font-family: "Google Sans";
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: url("/assets/fonts/GoogleSans-Regular-Djvx7XI4.woff2") format("woff2");
+    }
+
+    @font-face {
+      font-family: "Google Sans";
+      font-style: normal;
+      font-weight: 500;
+      font-display: swap;
+      src: url("/assets/fonts/GoogleSans-Medium-krSl1Cbs.woff2") format("woff2");
+    }
+
+    @font-face {
+      font-family: "Google Sans";
+      font-style: normal;
+      font-weight: 700;
+      font-display: swap;
+      src: url("/assets/fonts/GoogleSans-Bold-DdUpYAm4.woff2") format("woff2");
+    }
+
     .wrapper {
       display: flex;
       flex-direction: column;
