--- a/index.html
+++ b/index.html
@@ -34,11 +34,22 @@
   <meta name="twitter:image:alt" content="aitrends.now logo">
 
   <!-- Preload Bootstrap Icons -->
-  <link rel="preload" href="/src/assets/fonts/GoogleSans-Regular.woff2" as="font" type="font/woff2" crossorigin />
-  <link rel="preload" href="/src/assets/fonts/GoogleSans-Medium.woff2" as="font" type="font/woff2" crossorigin />
+
+
+  <style>
+    .profile-username {
+      font-family: "Google Sans", "Helvetica Neue", system-ui, Arial, sans-serif;
+      font-size: 3.125rem;
+      font-weight: 700;
+      letter-spacing: -0.09rem;
+      line-height: 1.2;
+      margin: 0.625rem 0 0;
+    }
+  </style>
+  <!-- Preload critical fonts only -->
   <link rel="preload" href="/src/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="/src/assets/fonts/bootstrap-icons.woff2" as="font" type="font/woff2" crossorigin />
-  <link rel="preload" href="/src/assets/fonts/bootstrap-icons.woff" as="font" type="font/woff" crossorigin />
+  <link rel="preload" href="/src/assets/fonts/GoogleSans-Regular.woff2" as="font" type="font/woff2" crossorigin />
 
 
 </head>
