--- a/index.html
+++ b/index.html
@@ -33,9 +33,6 @@
   <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
 
-  <!-- Preload Bootstrap Icons -->
-
-
   <style>
     .profile-username {
       font-family: "Google Sans", "Helvetica Neue", system-ui, Arial, sans-serif;
@@ -45,13 +42,27 @@
       line-height: 1.2;
       margin: 0.625rem 0 0;
     }
+
+    .profile-section {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 2rem;
+    }
+
+    .main-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 1.25rem;
+      text-align: center;
+    }
   </style>
-  <!-- Preload critical fonts only -->
+  <!-- Preload critical fonts -->
   <link rel="preload" href="/src/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="/src/assets/fonts/bootstrap-icons.woff2" as="font" type="font/woff2" crossorigin />
-  <link rel="preload" href="/src/assets/fonts/GoogleSans-Regular.woff2" as="font" type="font/woff2" crossorigin />
-
-
 </head>
 
 <body>
