--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
       src: url("/src/assets/fonts/GoogleSans-Bold.woff2") format("woff2");
     }
 
+    @font-face {
+      font-family: "Google Sans";
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: url("/src/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+    }
+
     .profile-username {
       font-family: "Google Sans", "Helvetica Neue", system-ui, Arial, sans-serif;
       font-size: 3.125rem;
