--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
   <link rel="preload" href="/src/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="/src/assets/fonts/bootstrap-icons.woff2" as="font" type="font/woff2" crossorigin />
   <!-- Defer non-critical CSS -->
-  <link rel="stylesheet" href="../index.css" media="print" onload="this.media='all'" />
-
+  <link rel="stylesheet" href="/src/index.css" media="print" onload="this.media='all'" />
 </head>
 
 <body>
