--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
       src: url("/src/assets/fonts/GoogleSans-Bold.woff2") format("woff2");
     }
 
-
+    @font-face {
+      font-family: "Google Sans";
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: url("/src/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+    }
 
     .profile-username {
       font-family: "Google Sans", "Helvetica Neue", system-ui, Arial, sans-serif;
