--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       font-style: normal;
       font-weight: 700;
       font-display: swap;
-      src: url("/assets/fonts/GoogleSans-Bold.woff2") format("woff2");
+      src: url("./assets/fonts/GoogleSans-Bold.woff2") format("woff2");
     }
 
     @font-face {
@@ -47,7 +47,7 @@
       font-style: normal;
       font-weight: 400;
       font-display: swap;
-      src: url("/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+      src: url("./assets/fonts/GoogleSans-Regular.woff2") format("woff2");
     }
 
     .profile-username {
