--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       margin: 0.625rem 0 0;
     }
   </style>
-  <link rel="preload" href="/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
-  <link rel="stylesheet" href="/assets/index.css" media="print" onload="this.media='all'" />
+  <link rel="preload" href="./assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="stylesheet" href="./assets/index.css" media="print" onload="this.media='all'" />
 </head>
 
 <body>
