--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
   <title>aitrends.now - Your Smart Link Hub</title>
   <meta name="description" content="Stay updated with the latest AI trends, tech updates, and useful resources.">
 
-  <!-- Favicons -->
-  <link rel="icon" href="/src/assets/images/favicon.png" sizes="any" type="image/png">
-  <link rel="icon" href="/src/assets/images/favicon-16x16.png" sizes="16x16" type="image/png">
-  <link rel="icon" href="/src/assets/images/favicon-32x32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="/src/assets/images/favicon-48x48.png" sizes="48x48" type="image/png">
-  <link rel="icon" href="/src/assets/images/favicon.ico">
-  <link rel="apple-touch-icon" href="/src/assets/images/apple-touch-icon.png">
-  <link rel="manifest" href="/src/assets/site.webmanifest">
+  <!-- Favicons (Move to public/) -->
+  <link rel="icon" href="./favicon.png" sizes="any" type="image/png">
+  <link rel="icon" href="./favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="./favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="./favicon-48x48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="./favicon.ico">
+  <link rel="apple-touch-icon" href="./apple-touch-icon.png">
+  <link rel="manifest" href="./site.webmanifest">
 
   <!-- Open Graph & Twitter Cards -->
   <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta property="og:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp">
+  <meta property="og:image" content="https://aitrendsnow.github.io/aitrends-now/images/social-share.webp">
   <meta property="og:image:alt" content="aitrends.now logo">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
+  <meta property="og:url" content="https://aitrendsnow.github.io/aitrends-now/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="aitrends.now">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="aitrends.now">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends.now/images/social-share.webp">
+  <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends-now/images/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
 
   <style>
@@ -59,8 +59,8 @@
       margin: 0.625rem 0 0;
     }
   </style>
-  <link rel="preload" href="src/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
-  <link rel="stylesheet" href="src/index.css" media="print" onload="this.media='all'" />
+  <link rel="preload" href="./assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="stylesheet" href="./index.css" media="print" onload="this.media='all'" />
 </head>
 
 <body>
