--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="icon" href="./favicon-48x48.png" sizes="48x48" type="image/png">
   <link rel="icon" href="./favicon.ico">
   <link rel="apple-touch-icon" href="./apple-touch-icon.png">
-  <link rel="manifest" href="./site.webmanifest">
+  <link rel="manifest" href="/site.webmanifest">
 
   <!-- Open Graph & Twitter Cards -->
   <meta property="og:title" content="aitrends.now">
