--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       font-style: normal;
       font-weight: 700;
       font-display: swap;
-      src: url("./assets/fonts/GoogleSans-Bold.woff2") format("woff2");
+      src: url("src/assets/fonts/GoogleSans-Bold.woff2") format("woff2");
     }
 
     @font-face {
@@ -47,7 +47,7 @@
       font-style: normal;
       font-weight: 400;
       font-display: swap;
-      src: url("./assets/fonts/GoogleSans-Regular.woff2") format("woff2");
+      src: url("src/assets/fonts/GoogleSans-Regular.woff2") format("woff2");
     }
 
     .profile-username {
@@ -57,10 +57,11 @@
       letter-spacing: -0.09rem;
       line-height: 1.2;
       margin: 0.625rem 0 0;
+      font-weight: 700;
     }
   </style>
   <link rel="preload" href="./assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
-  <link rel="stylesheet" href="./index.css" media="print" onload="this.media='all'" />
+  <link rel="stylesheet" href="/src/index.css" media="print" onload="this.media='all'" />
 </head>
 
 <body>
