--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       font-weight: 700;
     }
   </style>
-  <link rel="preload" href="./assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
+  <link rel="preload" href="src/assets/fonts/GoogleSans-Bold.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="stylesheet" href="/src/index.css" media="print" onload="this.media='all'" />
 </head>
 
