--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <meta name="description" content="Stay updated with the latest AI trends, tech updates, and useful resources.">
 
   <!-- Favicons (Move to public/) -->
-  <link rel="icon" href="./favicon.png" sizes="any" type="image/png">
-  <link rel="icon" href="./favicon-16x16.png" sizes="16x16" type="image/png">
-  <link rel="icon" href="./favicon-32x32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="./favicon-48x48.png" sizes="48x48" type="image/png">
-  <link rel="icon" href="./favicon.ico">
-  <link rel="apple-touch-icon" href="./apple-touch-icon.png">
+  <link rel="icon" href="src/assets/images/favicon.png" sizes="any" type="image/png">
+  <link rel="icon" href="src/assets/images/favicon-16x16.png" sizes="16x16" type="image/png">
+  <link rel="icon" href="src/assets/images/favicon-32x32.png" sizes="32x32" type="image/png">
+  <link rel="icon" href="src/assets/images/favicon-48x48.png" sizes="48x48" type="image/png">
+  <link rel="icon" href="src/assets/images/favicon.ico">
+  <link rel="apple-touch-icon" href="src/assets/images/favicon-48x48.png">
   <link rel="manifest" href="/site.webmanifest">
 
   <!-- Open Graph & Twitter Cards -->
