--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     }
 
     .profile-username {
-      font-family: "Google Sans", "Helvetica Neue", system-ui, Arial, sans-serif;
+      font-family: "Google Sans", system-ui, Arial, sans-serif;
       font-size: 3.125rem;
       font-weight: 700;
       letter-spacing: -0.09rem;
