--- a/index.html
+++ b/index.html
@@ -8,30 +8,29 @@
   <meta name="description" content="Stay updated with the latest AI trends, tech updates, and useful resources.">
 
   <!-- Favicons (Move to public/) -->
-  <link rel="icon" href="src/assets/images/favicon.png" sizes="any" type="image/png">
-  <link rel="icon" href="src/assets/images/favicon-16x16.png" sizes="16x16" type="image/png">
-  <link rel="icon" href="src/assets/images/favicon-32x32.png" sizes="32x32" type="image/png">
-  <link rel="icon" href="src/assets/images/favicon-48x48.png" sizes="48x48" type="image/png">
-  <link rel="icon" href="src/assets/images/favicon.ico">
-  <link rel="apple-touch-icon" href="src/assets/images/favicon-48x48.png">
-  <link rel="manifest" href="/site.webmanifest">
+  <link rel="icon" href="/aitrends.now/assets/webp/favicon-[hash].png" sizes="any" type="image/png">
+  <link rel="icon" href="/aitrends.now/assets/webp/favicon-16x16-[hash].png" sizes="16x16" type="image/png">
+  <link rel="icon" href="/aitrends.now/assets/webp/favicon-32x32-[hash].png" sizes="32x32" type="image/png">
+  <link rel="icon" href="/aitrends.now/assets/webp/favicon-48x48-[hash].png" sizes="48x48" type="image/png">
+  <link rel="icon" href="/aitrends.now/assets/webp/favicon-[hash].ico">
+  <link rel="apple-touch-icon" href="/aitrends.now/assets/webp/favicon-48x48-[hash].png">
+  <link rel="manifest" href="/aitrends.now/site.webmanifest">
 
   <!-- Open Graph & Twitter Cards -->
   <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta property="og:image" content="https://aitrendsnow.github.io/aitrends-now/images/social-share.webp">
+  <meta property="og:image" content="/aitrends.now/images/social-share.webp">
   <meta property="og:image:alt" content="aitrends.now logo">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="og:url" content="https://aitrendsnow.github.io/aitrends-now/">
+  <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="aitrends.now">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="aitrends.now">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta name="twitter:image" content="https://aitrendsnow.github.io/aitrends-now/images/social-share.webp">
-  <meta name="twitter:image:alt" content="aitrends.now logo">
+  <meta name="twitter:image" content="/aitrends.now/images/social-share.webp">
 
   <style>
     @font-face {
