--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>aitrends.now - Your Smart Link Hub</title>
+  <title>aitrends.now</title>
   <meta name="description" content="Stay updated with the latest AI trends, tech updates, and useful resources.">
 
   <!-- Favicons (Move to public/) -->
@@ -18,7 +18,8 @@
 
 
   <!-- Open Graph & Twitter Cards -->
-  <meta property="og:title" content="aitrends.now">
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:title" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta property="og:image" content="/aitrends.now/social-share.webp">
   <meta property="og:image:alt" content="aitrends.now logo">
@@ -27,13 +28,18 @@
   <meta property="og:logo" content="/aitrends.now/social-share.webp" />
   <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
   <meta property="og:type" content="website">
-  <meta property="og:locale" content="en_US">
+
   <meta property="og:site_name" content="aitrends.now">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="aitrends.now">
+  <meta name="twitter:title" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta name="twitter:image" content="/aitrends.now/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
+  <meta name="twitter:creator" content="@aitrendnow" />
+  <meta name="twitter:label1" content="Posted By:" />
+  <meta name="twitter:data1" content="aitrends.now" />
+  <meta name="twitter:label2" content="Est. reading time" />
+  <meta name="twitter:data2" content="20 seconds" />
 
   <style>
     @font-face {
