--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>aitrends.now</title>
   <meta name="description" content="Stay updated with the latest AI trends, tech updates, and useful resources.">
 
-  <!-- Favicons (Move to public/) -->
+
   <link rel="icon" href="src/assets/images/favicon.png" sizes="any" type="image/png">
   <link rel="icon" href="src/assets/images/favicon-16x16.png" sizes="16x16" type="image/png">
   <link rel="icon" href="src/assets/images/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -17,9 +17,9 @@
   <link rel="manifest" href="/site.webmanifest">
 
 
-  <!-- Open Graph & Twitter Cards -->
+
   <meta property="og:locale" content="en_US" />
-  <meta property="og:title" content="Tech enthusiast. Follow for updates & a shared love for tech.">
+  <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta property="og:image" content="/aitrends.now/social-share.webp">
   <meta property="og:image:alt" content="aitrends.now logo">
@@ -28,10 +28,11 @@
   <meta property="og:logo" content="/aitrends.now/social-share.webp" />
   <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
   <meta property="og:type" content="website">
+  <meta name="referrer" content="no-referrer">
 
   <meta property="og:site_name" content="aitrends.now">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Tech enthusiast. Follow for updates & a shared love for tech.">
+  <meta name="twitter:title" content="aitrends.now">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta name="twitter:image" content="/aitrends.now/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
