--- a/index.html
+++ b/index.html
@@ -18,29 +18,42 @@
 
 
 
+
+
+
+  <meta name="keywords" content="Apple, news, gear, Android, Google, Tech, Ai">
+  <meta name="robots" content="max-image-preview:large">
+  <meta name="referrer" content="no-referrer">
+
   <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
   <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta property="og:image" content="/aitrends.now/social-share.webp">
-  <meta property="og:image:alt" content="aitrends.now logo">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
-  <meta property="og:logo" content="/aitrends.now/social-share.webp" />
-  <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
-  <meta property="og:type" content="website">
-  <meta name="referrer" content="no-referrer">
-
+  <meta property="og:image:alt" content="aitrends.now logo">
   <meta property="og:site_name" content="aitrends.now">
+
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@aitrendnow">
+  <meta name="twitter:creator" content="@aitrendnow">
   <meta name="twitter:title" content="aitrends.now">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta name="twitter:image" content="/aitrends.now/social-share.webp">
   <meta name="twitter:image:alt" content="aitrends.now logo">
-  <meta name="twitter:creator" content="@aitrendnow" />
-  <meta name="twitter:label1" content="Posted By:" />
-  <meta name="twitter:data1" content="aitrends.now" />
-  <meta name="twitter:label2" content="Est. reading time" />
-  <meta name="twitter:data2" content="20 seconds" />
+  <meta name="twitter:label1" content="Posted By:">
+  <meta name="twitter:data1" content="aitrends.now">
+  <meta name="twitter:label2" content="Est. reading time">
+  <meta name="twitter:data2" content="20 seconds">
+
+  <link rel="shortcut icon" href="src/assets/images/favicon.ico">
+
+
+
+
+
 
   <style>
     @font-face {
