--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta property="og:image" content="/aitrends.now/social-share.webp">
-  <meta property="og:image:alt" content="aitrends.now logo">
+
+  <meta property="og:logo" content="src/assets/profile-image.webp" />
+
+  <meta property="og:image:alt" content="src/assets/profile-image.webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:logo" content="/aitrends.now/social-share.webp" />
@@ -37,7 +40,7 @@
   <meta name="twitter:title" content="aitrends.now">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta name="twitter:image" content="/aitrends.now/social-share.webp">
-  <meta name="twitter:image:alt" content="aitrends.now logo">
+  <meta name="twitter:image:alt" content="src/assets/profile-image.webp">
   <meta name="twitter:creator" content="@aitrendnow" />
   <meta name="twitter:label1" content="Posted By:" />
   <meta name="twitter:data1" content="aitrends.now" />
