--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>aitrends.now</title>
   <meta name="description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-
-
   <link rel="icon" href="src/assets/images/favicon.png" sizes="any" type="image/png">
   <link rel="icon" href="src/assets/images/favicon-16x16.png" sizes="16x16" type="image/png">
   <link rel="icon" href="src/assets/images/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -15,19 +13,11 @@
   <link rel="icon" href="src/assets/images/favicon.ico">
   <link rel="apple-touch-icon" href="src/assets/images/favicon-48x48.png">
   <link rel="manifest" href="/site.webmanifest">
-
-
-
   <meta property="og:locale" content="en_US" />
   <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta property="og:image" content="/aitrends.now/social-share.webp">
-
-
-
   <meta property="og:logo" content="src/assets/profile-image.webp" />
-
-
   <meta property="og:image:alt" content="src/assets/profile-image.webp">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -38,8 +28,7 @@
   <meta property="og:site_name" content="aitrends.now" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="aitrends.now">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta name="twitter:image" content="/aitrends.now/social-share.webp">
@@ -54,9 +43,13 @@
   <meta name="twitter:dnt" content="on" />
   <meta name="twitter:image:src" content="/aitrends.now/social-share.webp" />
   <meta name="twitter:creator" content="@aitrendnow" />
-  <meta property="twitter:card" content="summary_large_image" />
 
   <link rel="shortcut icon" href="src/assets/images/favicon.ico">
+
+
+
+
+
 
 
 
