--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
   <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="aitrends.now">
-  <meta property="og:site_name" content="aitrends.now" />
-  <meta property="og:image:width" content="1200" />
-  <meta property="og:image:height" content="630" />
+
+
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="aitrends.now">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta name="twitter:image" content="/aitrends.now/social-share.webp">
+  <meta name="twitter:image" content="/aitrends.now/social-share-small.webp">
   <meta name="twitter:image:alt" content="src/assets/profile-image.webp">
   <meta name="twitter:creator" content="@aitrendnow" />
   <meta name="twitter:label1" content="Posted By:" />
