--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <meta name="twitter:site" content="aitrends.now">
   <meta name="twitter:site" content="@aitrendnow" />
   <meta name="twitter:dnt" content="on" />
-  <meta name="twitter:image:src" content="/aitrends.now/social-share.webp" />
+  <meta name="twitter:image:src" content="/aitrends.now/social-share-small.webp" />
   <meta name="twitter:creator" content="@aitrendnow" />
 
   <link rel="shortcut icon" href="src/assets/images/favicon.ico">
