--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta property="og:image" content="/aitrends.now/social-share.webp">
+  <meta property="og:image" content="src/assets/profile-image.webp">
+
   <meta property="og:logo" content="src/assets/profile-image.webp" />
   <meta property="og:image:alt" content="src/assets/profile-image.webp">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
+
   <meta property="og:logo" content="/aitrends.now/social-share.webp" />
   <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
   <meta property="og:type" content="website">
@@ -30,7 +30,7 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="aitrends.now">
   <meta name="twitter:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta name="twitter:image" content="/aitrends.now/social-share-small.webp">
+  <meta name="twitter:image" content="src/assets/profile-image.webp">
   <meta name="twitter:image:alt" content="src/assets/profile-image.webp">
   <meta name="twitter:creator" content="@aitrendnow" />
   <meta name="twitter:label1" content="Posted By:" />
@@ -40,7 +40,7 @@
   <meta name="twitter:site" content="aitrends.now">
   <meta name="twitter:site" content="@aitrendnow" />
   <meta name="twitter:dnt" content="on" />
-  <meta name="twitter:image:src" content="/aitrends.now/social-share-small.webp" />
+  <meta name="twitter:image:src" content="src/assets/profile-image.webp" />
   <meta name="twitter:creator" content="@aitrendnow" />
 
   <link rel="shortcut icon" href="src/assets/images/favicon.ico">
