--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
   <link rel="icon" href="src/assets/images/favicon.ico">
   <link rel="apple-touch-icon" href="src/assets/images/favicon-48x48.png">
   <link rel="manifest" href="/site.webmanifest">
+
   <meta property="og:locale" content="en_US" />
   <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
-  <meta property="og:image" content="src/assets/profile-image.webp">
+  <meta property="og:image" content="/aitrends.now/social-share.webp">
 
   <meta property="og:logo" content="src/assets/profile-image.webp" />
-  <meta property="og:image:alt" content="src/assets/profile-image.webp">
 
 
+  <meta property="og:logo" content="/aitrends.now/social-share.webp" />
   <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="aitrends.now">
