--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
   <meta property="og:title" content="aitrends.now">
   <meta property="og:description" content="Tech enthusiast. Follow for updates & a shared love for tech.">
   <meta property="og:image" content="/aitrends.now/social-share.webp">
-
   <meta property="og:logo" content="src/assets/profile-image.webp" />
-
-
-
   <meta property="og:url" content="https://aitrendsnow.github.io/aitrends.now/">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="aitrends.now">
@@ -45,7 +41,38 @@
   <meta name="twitter:creator" content="@aitrendnow" />
 
   <link rel="shortcut icon" href="src/assets/images/favicon.ico">
-
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "WebSite",
+          "@id": "https://aitrendsnow.github.io/aitrends.now/#website",
+          "url": "https://aitrendsnow.github.io/aitrends.now/",
+          "name": "aitrends.now",
+          "description": "Tech enthusiast. Follow for updates & a shared love for tech.",
+          "publisher": {
+            "@id": "https://aitrendsnow.github.io/aitrends.now/#/schema/person/aitrendsnow"
+          }
+        },
+        {
+          "@type": "Person",
+          "@id": "https://aitrendsnow.github.io/aitrends.now/#/schema/person/aitrendsnow",
+          "name": "aitrends.now",
+          "image": {
+            "@type": "ImageObject",
+            "@id": "https://aitrendsnow.github.io/aitrends.now/#/schema/person/image/",
+            "url": "https://aitrendsnow.github.io/aitrends.now/social-share-small.webp",
+            "contentUrl": "https://aitrendsnow.github.io/aitrends.now/social-share-small.webp"
+          },
+          "sameAs": [
+            "https://aitrendsnow.github.io/aitrends.now/",
+            "https://x.com/aitrendnow" 
+          ]
+        }
+      ]
+    }
+    </script>
 
 
 
